assets/css/custom.css
@charset "UTF-8";

body {
  font-family: "Rubik", sans-serif;
  color: #27313d;
  margin: 0;
  overflow-x: hidden;
  min-width: 100vw;
  max-width: 100vw;
  box-sizing: content-box;
}

h1 {
  display: block;
  font-size: 2em;
  margin-block-start: 0.67em;
  margin-block-end: 0.67em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
}

b {
  font-weight: 500;
}

a {
  text-decoration: none;
}

p {
  line-height: 1.5;
}

.home {
  min-width: 100vw;
  max-width: 100vw;
}

.row {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-content: stretch;
}

.half-col {
  width: 50%;
  margin: 0 auto;
}


.button {
  height: 50px;
  width: 290px;
  max-width: 80vw;
  border-radius: 6px;
  background-color: #0065c7;
  color: #f4f4f4;
  font-size: 16px;
  letter-spacing: 1.45px;
  text-align: center;
  line-height: 50px;
  text-transform: uppercase;
}

.icon {
  height: 55px;
  padding-bottom: 30px;
}

.logo {
  height: 40px;
  margin-right: 70px;
}

.mobile-logo {
  display: none;
  height: 30px;
  margin-right: 10vw;
}

.site-nav {
  border: none;
  display: flex;
  flex: 1;
  max-width: 300px;
  justify-content: space-between;
  background-color: white;
  box-shadow: none;
}

.site-header {
  padding: 15px 80px;
  border-top: 0px;
  border-bottom: 1px solid #e8e8e8;
  min-height: 56px;
  position: relative;
  display: flex;
  align-items: center;
  max-width: 100vw;
}

.site-title {
  display: flex;
}

.page-link {
  text-transform: uppercase;
  font-size: 14px;
  letter-spacing: 1.4px;
  text-align: center;
  color: #454f5b;
  text-decoration: none;
}

.page-link:hover {
  text-decoration: underline;
}

.page-content {
  padding: 0;
}

.intro-container {
  padding: 50px 0;
  text-align: center;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.intro-container-title {
  padding: 0 50px;
  font-size: 60px;
  font-weight: 500;
  text-align: center;
  color: #0065c7;
}

.intro-container-subtitle {
  padding: 40px 50px 0;
  font-size: 21px;
  line-height: 1.43;
  text-align: center;
  color: #27313d;
}

.video-player-controls {
  height: 20px;
  border-radius: 5px 5px 0px 0px;
  text-align: left;
  background: #f7fbfe;
  margin: 0;
}

.video-player-control-btn-close {
  width: 7px;
  height: 7px;
  border: 1px solid #dde2eb;
  border-radius: 5px;
  display: inline-block;
  margin-left: 10px;
  background-color: #db624f;
}

.video-player-control-btn-minimize {
  width: 7px;
  height: 7px;
  border: 1px solid #dde2eb;
  border-radius: 5px;
  display: inline-block;
  margin-left: 5px;
  background-color: #f2d283;
}

.video-player-control-btn-expand {
  width: 7px;
  height: 7px;
  border: 1px solid #dde2eb;
  border-radius: 5px;
  display: inline-block;
  margin-left: 5px;
  background-color: #3d9e78;
}

.video-player {
  width: 70vw;
  max-width: 1200px;
  height: calc(70vw / 853 * 480 + 20px);
  max-height: calc(1200px / 853 * 480 + 20px);
  margin: auto;
  margin-top: 50px;
  border-radius: 5px;
  box-shadow: 0 4px 18px 0 rgba(171, 185, 201, 0.5);
  overflow: hidden;
  border: 1px solid #dde2eb;
}

.video-player iframe {
  width: 70vw;
  max-width: 1200px;
  height: calc(70vw / 853 * 480);
  max-height: calc(1200px / 853 * 480);
}

.hero-container {
  text-align: center;
}

.hero-item {
  padding-top: 120px;
  padding-bottom: 120px;
  height: 280px;
  min-width: 50%;
}

.hero-business {
  background: #f7fbfe;
  text-align: center;
  min-width: 50%;
  margin-left: 0px;
}

.hero-citizen {
  background: #f0f7fc;
  min-width: 50%;
  margin-left: 0px;
}

.download-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: wrap;
  width: 100%;
  max-width: 350px;
  margin: auto;
}

.beta-only {
  width: 100%;
  border: 2px solid #454f5b;
  border-radius: 5px;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1.45px;
  height: 46px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: not-allowed;
}

.beta-only:hover {
  background: rgba(250, 250, 250, 0.1);
}

.benefits-citizens-call-to-action .download-container {
  margin: 0;
}

.download-btn {
  height: 50px;
}

.hero-item-subtitle {
  font-size: 14px;
  font-weight: 500;
  line-height: 2.14;
  letter-spacing: 1.4px;
  color: #454f5b;
  padding-bottom: 20px;
}

.hero-item-title {
  display: inline-block;
  height: 140px;
  max-width: 80%;
  width: 370px;
  padding-bottom: 13px;
  color: #253441;
  font-size: 35px;
  font-weight: 500;
  line-height: 1.23;
  text-align: center;
}

.hero-item-title {
  vertical-align: middle;
}

.hero-item-text {
  font-size: 18px;
  line-height: 1.56;
  color: #253441;
}

#get-started-btn {
  display: inline-block;
  margin-top: 0px !important;
}

.trusted-by-container {
  padding: 80px 3vw 0px 3vw;
  text-align: center;
}

.trusted-by-title {
  width: 100%;
  text-align: center;
  font-size: 14px;
  font-weight: 500;
  line-height: 2.14;
  letter-spacing: 1.4px;
  color: #454f5b;
  padding-bottom: 8px;
}

.trusted-by-item {
  padding: 50px;
}

.how-it-works-left {
  padding: 200px 30px;
  display: flex;
  flex-direction: column;
  max-width: 350px;
  margin: auto;
}

.how-it-works-subtitle {
  font-size: 14px;
  font-weight: 500;
  line-height: 2.14;
  letter-spacing: 1.4px;
  color: #454f5b;
  padding-bottom: 35px;
}

.how-it-works-title {
  font-size: 35px;
  font-weight: 500;
  padding-bottom: 13px;
  font-family: "Rubik", sans-serif;
}

.how-it-works-steps span {
  vertical-align: middle;
}

.how-it-works-steps-icon {
  border: 1px solid #3d9e78;
  border-radius: 20px;
  display: inline-block;
  height: 24px;
  width: 24px;
  min-width: 24px;
  background: #3d9e78;
  text-align: center;
  vertical-align: middle;
  color: white;
  margin: 10px 10px 10px 0px;
  font-size: 10px;
  line-height: 24px;
}
/* ... */

